--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇦🇺 澳大利亚-1.48MB/s(Youtube:不良林), server: jgwxn4.gaox.ml, port: 443, type: trojan, password: e8c1ab3c-89b3-4933-92df-682e6dce7819, sni: jgwxn4.gaox.ml, skip-cert-verify: true}
+  - {name: 🇨🇦 加拿大-964.7KB/s(Youtube:不良林), server: 72.140.224.195, port: 803, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
   - {name: 🇯🇵 日本-3.58MB/s(Youtube:不良林), server: 85.208.108.20, port: 6697, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
-  - {name: 🇨🇦 加拿大-746.0KB/s(Youtube:不良林), server: 196.247.59.154, port: 802, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇸🇬 新加坡-216.1KB/s(Youtube:不良林), server: s4.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s4.hazz.win, skip-cert-verify: true}
-  - {name: 🇨🇦 加拿大-969.1KB/s(Youtube:不良林), server: 72.140.224.195, port: 801, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
   - {name: 🇨🇳 中国-352.0KB/s(Youtube:不良林), server: best02.downloadmovie.cn, port: 65087, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best02.downloadmovie.cn}}
-  - {name: 🇨🇳 中国-424.6KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34004, type: trojan, password: 177501cc-f0c2-3cc3-b9a7-8c1e8e27655f, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-3.72MB/s(Youtube:不良林), server: 120.233.7.225, port: 100, type: trojan, password: 7dp3vF, skip-cert-verify: true}
-  - {name: 🇨🇦 加拿大-1.20MB/s(Youtube:不良林), server: 196.247.59.154, port: 806, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇨🇦 加拿大-333.8KB/s(Youtube:不良林), server: 72.140.224.195, port: 805, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
   - {name: 🇺🇸 美国-2.54MB/s(Youtube:不良林), server: us-05.licom.ml, port: 12501, type: trojan, password: ce433528-39fa-4711-bc0d-25a5b1579574, sni: us-05.licom.ml, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-450.8KB/s(Youtube:不良林), server: best04.downloadmovie.cn, port: 65093, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best04.downloadmovie.cn}}
+  - {name: 🇨🇳 中国-5.38MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
+  - {name: 🇫🇷 法国-1.31MB/s(Youtube:不良林), server: 195.154.200.150, port: 2376, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
+  - {name: 🇬🇧 英国-1.35MB/s(Youtube:不良林), server: 144.24.88.101, port: 16833, type: vmess, uuid: f5425ccf-3946-4fb4-eb24-5393d78a392f, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-344.9KB/s(Youtube:不良林), server: 5.188.0.151, port: 800, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇦🇺 澳大利亚-1.48MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-964.7KB/s(Youtube:不良林)
       - 🇯🇵 日本-3.58MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-746.0KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-216.1KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-969.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-352.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-424.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.72MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.20MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-333.8KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.54MB/s(Youtube:不良林)
+      - 🇨🇳 中国-450.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.38MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.31MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.35MB/s(Youtube:不良林)
+      - 🇺🇸 美国-344.9KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇦🇺 澳大利亚-1.48MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-964.7KB/s(Youtube:不良林)
       - 🇯🇵 日本-3.58MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-746.0KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-216.1KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-969.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-352.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-424.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.72MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.20MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-333.8KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.54MB/s(Youtube:不良林)
+      - 🇨🇳 中国-450.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.38MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.31MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.35MB/s(Youtube:不良林)
+      - 🇺🇸 美国-344.9KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇦🇺 澳大利亚-1.48MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-964.7KB/s(Youtube:不良林)
       - 🇯🇵 日本-3.58MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-746.0KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-216.1KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-969.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-352.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-424.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.72MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.20MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-333.8KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.54MB/s(Youtube:不良林)
+      - 🇨🇳 中国-450.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.38MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.31MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.35MB/s(Youtube:不良林)
+      - 🇺🇸 美国-344.9KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇦🇺 澳大利亚-1.48MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-964.7KB/s(Youtube:不良林)
       - 🇯🇵 日本-3.58MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-746.0KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-216.1KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-969.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-352.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-424.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.72MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.20MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-333.8KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.54MB/s(Youtube:不良林)
+      - 🇨🇳 中国-450.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.38MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.31MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.35MB/s(Youtube:不良林)
+      - 🇺🇸 美国-344.9KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇦🇺 澳大利亚-1.48MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-964.7KB/s(Youtube:不良林)
       - 🇯🇵 日本-3.58MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-746.0KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-216.1KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-969.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-352.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-424.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.72MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.20MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-333.8KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.54MB/s(Youtube:不良林)
+      - 🇨🇳 中国-450.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.38MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.31MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.35MB/s(Youtube:不良林)
+      - 🇺🇸 美国-344.9KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇦🇺 澳大利亚-1.48MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-964.7KB/s(Youtube:不良林)
       - 🇯🇵 日本-3.58MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-746.0KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-216.1KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-969.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-352.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-424.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.72MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.20MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-333.8KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.54MB/s(Youtube:不良林)
+      - 🇨🇳 中国-450.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.38MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.31MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.35MB/s(Youtube:不良林)
+      - 🇺🇸 美国-344.9KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇦🇺 澳大利亚-1.48MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-964.7KB/s(Youtube:不良林)
       - 🇯🇵 日本-3.58MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-746.0KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-216.1KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-969.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-352.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-424.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.72MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.20MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-333.8KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.54MB/s(Youtube:不良林)
+      - 🇨🇳 中国-450.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.38MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.31MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.35MB/s(Youtube:不良林)
+      - 🇺🇸 美国-344.9KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
