--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,114 +5,115 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇦 加拿大-964.7KB/s(Youtube:不良林), server: 72.140.224.195, port: 803, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇯🇵 日本-3.58MB/s(Youtube:不良林), server: 85.208.108.20, port: 6697, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
-  - {name: 🇨🇳 中国-352.0KB/s(Youtube:不良林), server: best02.downloadmovie.cn, port: 65087, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best02.downloadmovie.cn}}
-  - {name: 🇨🇦 加拿大-333.8KB/s(Youtube:不良林), server: 72.140.224.195, port: 805, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇺🇸 美国-2.54MB/s(Youtube:不良林), server: us-05.licom.ml, port: 12501, type: trojan, password: ce433528-39fa-4711-bc0d-25a5b1579574, sni: us-05.licom.ml, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-450.8KB/s(Youtube:不良林), server: best04.downloadmovie.cn, port: 65093, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best04.downloadmovie.cn}}
-  - {name: 🇨🇳 中国-5.38MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
-  - {name: 🇫🇷 法国-1.31MB/s(Youtube:不良林), server: 195.154.200.150, port: 2376, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
+  - {name: 🇦🇺 澳大利亚-761.8KB/s(Youtube:不良林), server: 185.167.116.250, port: 9006, type: ss, cipher: aes-256-cfb, password: FAdUvMJUq5vDgKEq}
+  - {name: 🇨🇳 中国-3.18MB/s(Youtube:不良林), server: in-us-1.onebox6.org, port: 38401, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: in-us-1.onebox6.org}}
+  - {name: 🇨🇦 加拿大-1.58MB/s(Youtube:不良林), server: 196.247.59.154, port: 809, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇭🇰 (已存活9天)香港-3.51MB/s(Youtube:不良林), server: 47.243.31.8, port: 51657, type: vmess, uuid: f0eb8855-d3a4-4fc4-98b6-711681c756b8, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: http, http-opts: {method: GET, path: [/], headers: {Host: [47.243.31.8]}}}
   - {name: 🇬🇧 英国-1.35MB/s(Youtube:不良林), server: 144.24.88.101, port: 16833, type: vmess, uuid: f5425ccf-3946-4fb4-eb24-5393d78a392f, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-344.9KB/s(Youtube:不良林), server: 5.188.0.151, port: 800, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇨🇳 中国-1.08MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30002, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-2.77MB/s(Youtube:不良林), server: 85.208.108.20, port: 7002, type: ss, cipher: aes-256-gcm, password: RexnBgU7EV5ADxG}
+  - {name: 🇦🇺 澳大利亚-1.24MB/s(Youtube:不良林), server: jgwxn3.gaox.ml, port: 443, type: trojan, password: cb43b7c2-b744-41c5-bcc2-fd7467b332cf, sni: jgwxn3.gaox.ml, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-779.5KB/s(Youtube:不良林), server: in-sg-1.onebox6.org, port: 38701, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: in-sg-1.onebox6.org}}
+  - {name: 🇬🇧 英国-2.55MB/s(Youtube:不良林), server: 88.150.137.201, port: 1021, type: ssr, cipher: aes-128-ctr, password: sEscPBiAD9K$&@79, protocol: auth_aes128_md5, obfs: tls1.2_ticket_auth, protocol-param: "", obfs-param: ""}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-964.7KB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.58MB/s(Youtube:不良林)
-      - 🇨🇳 中国-352.0KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-333.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.54MB/s(Youtube:不良林)
-      - 🇨🇳 中国-450.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.38MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.31MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-761.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.18MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.58MB/s(Youtube:不良林)
+      - 🇭🇰 (已存活9天)香港-3.51MB/s(Youtube:不良林)
       - 🇬🇧 英国-1.35MB/s(Youtube:不良林)
-      - 🇺🇸 美国-344.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.08MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.77MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.24MB/s(Youtube:不良林)
+      - 🇨🇳 中国-779.5KB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.55MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇦 加拿大-964.7KB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.58MB/s(Youtube:不良林)
-      - 🇨🇳 中国-352.0KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-333.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.54MB/s(Youtube:不良林)
-      - 🇨🇳 中国-450.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.38MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.31MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-761.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.18MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.58MB/s(Youtube:不良林)
+      - 🇭🇰 (已存活9天)香港-3.51MB/s(Youtube:不良林)
       - 🇬🇧 英国-1.35MB/s(Youtube:不良林)
-      - 🇺🇸 美国-344.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.08MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.77MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.24MB/s(Youtube:不良林)
+      - 🇨🇳 中国-779.5KB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.55MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-964.7KB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.58MB/s(Youtube:不良林)
-      - 🇨🇳 中国-352.0KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-333.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.54MB/s(Youtube:不良林)
-      - 🇨🇳 中国-450.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.38MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.31MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-761.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.18MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.58MB/s(Youtube:不良林)
+      - 🇭🇰 (已存活9天)香港-3.51MB/s(Youtube:不良林)
       - 🇬🇧 英国-1.35MB/s(Youtube:不良林)
-      - 🇺🇸 美国-344.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.08MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.77MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.24MB/s(Youtube:不良林)
+      - 🇨🇳 中国-779.5KB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.55MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
+      - 🇭🇰 (已存活9天)香港-3.51MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇦 加拿大-964.7KB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.58MB/s(Youtube:不良林)
-      - 🇨🇳 中国-352.0KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-333.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.54MB/s(Youtube:不良林)
-      - 🇨🇳 中国-450.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.38MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.31MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-761.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.18MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.58MB/s(Youtube:不良林)
+      - 🇭🇰 (已存活9天)香港-3.51MB/s(Youtube:不良林)
       - 🇬🇧 英国-1.35MB/s(Youtube:不良林)
-      - 🇺🇸 美国-344.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.08MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.77MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.24MB/s(Youtube:不良林)
+      - 🇨🇳 中国-779.5KB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.55MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-964.7KB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.58MB/s(Youtube:不良林)
-      - 🇨🇳 中国-352.0KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-333.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.54MB/s(Youtube:不良林)
-      - 🇨🇳 中国-450.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.38MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.31MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-761.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.18MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.58MB/s(Youtube:不良林)
+      - 🇭🇰 (已存活9天)香港-3.51MB/s(Youtube:不良林)
       - 🇬🇧 英国-1.35MB/s(Youtube:不良林)
-      - 🇺🇸 美国-344.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.08MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.77MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.24MB/s(Youtube:不良林)
+      - 🇨🇳 中国-779.5KB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.55MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇦 加拿大-964.7KB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.58MB/s(Youtube:不良林)
-      - 🇨🇳 中国-352.0KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-333.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.54MB/s(Youtube:不良林)
-      - 🇨🇳 中国-450.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.38MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.31MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-761.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.18MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.58MB/s(Youtube:不良林)
+      - 🇭🇰 (已存活9天)香港-3.51MB/s(Youtube:不良林)
       - 🇬🇧 英国-1.35MB/s(Youtube:不良林)
-      - 🇺🇸 美国-344.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.08MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.77MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.24MB/s(Youtube:不良林)
+      - 🇨🇳 中国-779.5KB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.55MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +129,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇦 加拿大-964.7KB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.58MB/s(Youtube:不良林)
-      - 🇨🇳 中国-352.0KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-333.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.54MB/s(Youtube:不良林)
-      - 🇨🇳 中国-450.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.38MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.31MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-761.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.18MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.58MB/s(Youtube:不良林)
+      - 🇭🇰 (已存活9天)香港-3.51MB/s(Youtube:不良林)
       - 🇬🇧 英国-1.35MB/s(Youtube:不良林)
-      - 🇺🇸 美国-344.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.08MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.77MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.24MB/s(Youtube:不良林)
+      - 🇨🇳 中国-779.5KB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.55MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
