--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,115 +5,114 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-386.3KB/s(Youtube:不良林), server: 5.188.0.151, port: 802, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇨🇦 加拿大-1.13MB/s(Youtube:不良林), server: 72.140.224.195, port: 801, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇨🇳 中国-2.19MB/s(Youtube:不良林), server: 120.233.7.225, port: 100, type: trojan, password: 7dp3vF, skip-cert-verify: true}
-  - {name: 🇨🇦 加拿大-1.14MB/s(Youtube:不良林), server: 138.197.166.205, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇭🇰 香港-21.06MB/s(Youtube:不良林), server: trojan-daozhu-uallen-qbit-azure-hk.kinhproxy.com, port: 443, type: trojan, password: trojan-daozhu-uallen-qbit-azure-hk, sni: trojan-daozhu-uallen-qbit-azure-hk.kinhproxy.com, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-1.01MB/s(Youtube:不良林), server: us-05.licom.ml, port: 12501, type: trojan, password: ce433528-39fa-4711-bc0d-25a5b1579574, sni: us-05.licom.ml, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-1.26MB/s(Youtube:不良林), server: 138.68.248.130, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇬🇧 英国-1.93MB/s(Youtube:不良林), server: jgwld3.gaox.ml, port: 443, type: trojan, password: 71b55a84-3fac-4458-abff-eaad79219c91, sni: jgwld3.gaox.ml, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-797.4KB/s(Youtube:不良林), server: 89.31.126.31, port: 809, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇸🇬 新加坡-1019.3KB/s(Youtube:不良林), server: sg-04.licom.ml, port: 8443, type: trojan, password: ce433528-39fa-4711-bc0d-25a5b1579574, sni: sg-04.licom.ml, skip-cert-verify: true}
+  - {name: 🇹🇭 泰国-1.83MB/s(Youtube:不良林), server: 119.59.116.248, port: 17159, type: trojan, password: PHnvNV7HGp, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-2.53MB/s(Youtube:不良林), server: in-us-1.onebox6.org, port: 38401, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: in-us-1.onebox6.org}}
+  - {name: 🇦🇺 澳大利亚-1.24MB/s(Youtube:不良林), server: jgwxn3.gaox.ml, port: 443, type: trojan, password: cb43b7c2-b744-41c5-bcc2-fd7467b332cf, sni: jgwxn3.gaox.ml, skip-cert-verify: true}
+  - {name: 🇳🇱 荷兰-1.88MB/s(Youtube:不良林), server: youtube-bai-piao-wang-zhe.nl.884899.cf, port: 41196, type: trojan, password: 94afcc56-cc1c-4cd4-8c82-1215cd052795, sni: youtube-bai-piao-wang-zhe.nl.884899.cf, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-286.0KB/s(Youtube:不良林), server: best04.downloadmovie.cn, port: 65093, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best04.downloadmovie.cn}}
+  - {name: 🇨🇦 加拿大-655.0KB/s(Youtube:不良林), server: 72.140.224.195, port: 803, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇨🇦 加拿大-1.37MB/s(Youtube:不良林), server: 72.140.224.195, port: 809, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇨🇦 加拿大-795.1KB/s(Youtube:不良林), server: 72.140.224.195, port: 810, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇨🇦 加拿大-4.18MB/s(Youtube:不良林), server: 161.129.60.17, port: 25634, type: trojan, password: 177501cc-f0c2-3cc3-b9a7-8c1e8e27655f, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-316.4KB/s(Youtube:不良林), server: 120.233.29.189, port: 65086, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 120.233.29.189}}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-386.3KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.13MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.19MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.14MB/s(Youtube:不良林)
-      - 🇭🇰 香港-21.06MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.01MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.26MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.93MB/s(Youtube:不良林)
-      - 🇯🇵 日本-797.4KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1019.3KB/s(Youtube:不良林)
+      - 🇹🇭 泰国-1.83MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.53MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.24MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.88MB/s(Youtube:不良林)
+      - 🇨🇳 中国-286.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-655.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.37MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-795.1KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-4.18MB/s(Youtube:不良林)
+      - 🇨🇳 中国-316.4KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-386.3KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.13MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.19MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.14MB/s(Youtube:不良林)
-      - 🇭🇰 香港-21.06MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.01MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.26MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.93MB/s(Youtube:不良林)
-      - 🇯🇵 日本-797.4KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1019.3KB/s(Youtube:不良林)
+      - 🇹🇭 泰国-1.83MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.53MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.24MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.88MB/s(Youtube:不良林)
+      - 🇨🇳 中国-286.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-655.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.37MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-795.1KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-4.18MB/s(Youtube:不良林)
+      - 🇨🇳 中国-316.4KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-386.3KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.13MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.19MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.14MB/s(Youtube:不良林)
-      - 🇭🇰 香港-21.06MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.01MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.26MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.93MB/s(Youtube:不良林)
-      - 🇯🇵 日本-797.4KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1019.3KB/s(Youtube:不良林)
+      - 🇹🇭 泰国-1.83MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.53MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.24MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.88MB/s(Youtube:不良林)
+      - 🇨🇳 中国-286.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-655.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.37MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-795.1KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-4.18MB/s(Youtube:不良林)
+      - 🇨🇳 中国-316.4KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 香港-21.06MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-386.3KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.13MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.19MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.14MB/s(Youtube:不良林)
-      - 🇭🇰 香港-21.06MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.01MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.26MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.93MB/s(Youtube:不良林)
-      - 🇯🇵 日本-797.4KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1019.3KB/s(Youtube:不良林)
+      - 🇹🇭 泰国-1.83MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.53MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.24MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.88MB/s(Youtube:不良林)
+      - 🇨🇳 中国-286.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-655.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.37MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-795.1KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-4.18MB/s(Youtube:不良林)
+      - 🇨🇳 中国-316.4KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-386.3KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.13MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.19MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.14MB/s(Youtube:不良林)
-      - 🇭🇰 香港-21.06MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.01MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.26MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.93MB/s(Youtube:不良林)
-      - 🇯🇵 日本-797.4KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1019.3KB/s(Youtube:不良林)
+      - 🇹🇭 泰国-1.83MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.53MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.24MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.88MB/s(Youtube:不良林)
+      - 🇨🇳 中国-286.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-655.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.37MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-795.1KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-4.18MB/s(Youtube:不良林)
+      - 🇨🇳 中国-316.4KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-386.3KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.13MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.19MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.14MB/s(Youtube:不良林)
-      - 🇭🇰 香港-21.06MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.01MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.26MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.93MB/s(Youtube:不良林)
-      - 🇯🇵 日本-797.4KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1019.3KB/s(Youtube:不良林)
+      - 🇹🇭 泰国-1.83MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.53MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.24MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.88MB/s(Youtube:不良林)
+      - 🇨🇳 中国-286.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-655.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.37MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-795.1KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-4.18MB/s(Youtube:不良林)
+      - 🇨🇳 中国-316.4KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -129,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-386.3KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.13MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.19MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.14MB/s(Youtube:不良林)
-      - 🇭🇰 香港-21.06MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.01MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.26MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.93MB/s(Youtube:不良林)
-      - 🇯🇵 日本-797.4KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1019.3KB/s(Youtube:不良林)
+      - 🇹🇭 泰国-1.83MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.53MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.24MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.88MB/s(Youtube:不良林)
+      - 🇨🇳 中国-286.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-655.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.37MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-795.1KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-4.18MB/s(Youtube:不良林)
+      - 🇨🇳 中国-316.4KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
